Fixed Logo text from overflowing

--- a/style.css
+++ b/style.css
@@ -307,4 +307,24 @@ form {
         flex-direction: column; 
         gap: 15px;
     }
+
+   
+    .logo1, .logo2 {
+    display: flex;
+    border: #D9D9D9 2px solid;
+    border-radius: 10px;
+    align-items: center;
+    padding: 4px 20px 4px 20px;
+    cursor: pointer;
+    width: 220px; 
+    height: 40px;
+    } 
+
+    .logo1 p, .logo2 p {
+    font-size: 14px; 
+    white-space: nowrap; 
+    }
+
+
+
 }
